kubernetes/applications/media/servarr/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jellyseerr
  ports:
    - name: web
      port: 5055
      targetPort: http
